# graz-opnv-bot

./: Cargo.toml  LICENSE.txt  README.md  execute-bot.sh  graz-opnv-bot.json
src/: main.rs
