[package]
name = "graz-opnv-bot"
version = "0.1.1"
edition = "2024"
authors = ["Thomas Lienbacher <thomas@lienbacher.dev>"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
html-escape = "0.2.13"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = { version = "0.24" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
log = "0.4"
simple_logger = "5.0"
